# EasyTools

./: CMakeLists.txt  README.md
docs/: doc-EasyTools.txt
include/: Box.hpp  Calculation.hpp  EasyTools.hpp  Files.hpp  Time.hpp  Utilities.hpp
src/: EasyTools.cpp
tests/: test  test.cpp
